# etsu-projects

algorithms/linear_programming/: hmwk1-sol-1.doc
all_lectures/csci5150_distributed/: 1-introduction.pptx  2-Overview of Distributed Systems.pptx  3-architecture.pptx  4-processes and threads.pptx  5-communication.pptx  6-Distributed Shared Memory.pptx
all_lectures/csci5200_sse/: 10-RequirementsAnalysis.pptx  11-Specifications.pptx  12-IntroToFormalSpecifications.pptx  13-RequirementsV&V.pptx  7-RequirementsElicitation.pptx  8-Class_Relationships.pptx  9-AnalysisModeling.pptx
all_lectures/csci5230_project_management/: [01] Introduction to Software Project Management.ppt  [02] Project Integration Management.ppt  [03.1] Software Development Metholodogies, part 1 - examples.ppt  [03.2] Software Development Metholodogies, part 2 - perspectives.ppt  [03.3] Software Development Metholodogies, part 3 - scrum.ppt  [04] Scope Management.ppt  [05] Time and Effort Estimation.ppt  [06] Project Scheduling.ppt  [07] Schedule Negotiation.ppt  [08] Project Cost and Procurement Management.ppt  (+14 more)
distributed/hw4-pramod-hasan-mod/: .gitignore  CMakeLists.txt  HW4_QT.creator.user.3.2-pre1  HW4_QT.files  HW4_QT.includes  client.cpp  client.h  communication.cpp  communication.h  constants.h  content.cpp  content.h  logger.h  main.cpp  makefile  message.h  neighbors  neighbors.h  portnums  run.sh  run1.sh  run2.sh  server.cpp  server.h  utility.cpp  utility.h
reasearch_methods/: Code coverage.docx  nepal pramod - code coverage.pptx
software_design/: assignment 01.doc
(+253 files in other folders)
